--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         function submitFirebase(t) {
             const projName = document.getElementById('project-name').value;
             const pathName = document.getElementById('path-name').value;
-            let Url = 'https://papatchaya-taist-exam.firebaseio.com/road.json';            
+            let Url = 'https://papatchaya-taist-exam.firebaseio.com/' + pathName + '.json';            
             let Data = {
                 timestamp: t,
                 latitude: posLatitude,
